--- a/yevis-metadata_nf-core_rnaseq.yml
+++ b/yevis-metadata_nf-core_rnaseq.yml
@@ -8,7 +8,7 @@ authors:
     affiliation: "The University of Tokyo"
     orcid: 0000-0003-2765-0049
 workflow:
-  name: nf-core - rnaseq
+  name: nf-core - rnaseq - v3.7
   readme: "https://raw.githubusercontent.com/nf-core/rnaseq/e0dfce9af5c2299bcc2b8a74b6559ce055965455/README.md"
   language:
     type: NFL
